--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,15 +5,41 @@
     src:url("fonts/sacco/truetype/Sacco-SemiBoldCondensed.ttf");
 }
 
-.first-page {
-    max-width: 100%;
-    max-height: 100%;
-    background-image:url("images/main_img_blur.png");
+@font-face {
+    font-family:"oswald";
+    src:url("fonts/Oswald/Oswald-VariableFont_wght.ttf");
 }
 
+@font-face {
+    font-family:"oswald";
+    src:url("fonts/Oswald/static/Oswald-Light.ttf");
+}
+body {
+    background-color:black;
+}
 .main-header {
     font-family:"sacco";
     font-size: 450%;
     margin-top:30%;
     margin-left:10%;
+}
+
+.first-page {
+    max-width: 100%;
+    max-height: 100%;
+    color: white;
+    background-image:url("images/main_img_blur.png");
+}
+
+.second-page {
+    display:flex;
+    font-size: 140%;
+    color: white;
+    font-family:"oswald";
+    margin-left: 10%;
+    margin-right: 20%;
+    background-color: black;
+}
+.second-page-text {
+    font-style:light;
 }
