--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -8,15 +8,20 @@
     <title>Дни воинской славы</title>
 </head>
 <body>
+
+    
+    <!-- Стартовая страница  -->
     <div class="first-page">
-        <img src="">
+        <img src="/static/images/main_img.png" class="main-img">
         <h1 class="main-header">дни воинской славы</h1>
     </div>
 
-    <div class="second-page">
-        <p>
-            Дни воинской славы Великой Отечественной войны <br>
-            <p class="secon-page-text">представляют собой важные моменты в истории нашей страны, 
+
+    <!-- Вторая страница (описание сайта) -->
+    <div class="description-page">
+        <p class="main-description">
+            <b>Дни воинской славы Великой Отечественной войны</b> <br>
+            представляют собой важные моменты в истории нашей страны, 
             отражающие героизм и самоотверженность людей, которые сражались 
             за свою Родину. Этот сайт предлагает интерактивную карту, на которой
              отмечены ключевые события и операции, происходившие в разные дни войны.
@@ -27,6 +32,29 @@
             глубже понять, как эти дни воинской славы повлияли на судьбы миллионов.</p>
         </p>
     </div>
+    <div class="box">
+    <!-- 27 января -->
+    <div class="day-section">
+        <img src="/static/images/map27.png">
+        <p class="day-description"> 
+            27 января — День полного освобождения Ленинграда от фашистской блокады
+            27 января 1944 года советские войска завершили операцию по освобождению 
+            Ленинграда от фашистской блокады, которая длилась 872 дня. Блокада началась 
+            в сентябре 1941 года и стала одной из самых трагических страниц Великой 
+            Отечественной войны. Город испытывал ужасные страдания: голод, бомбардировки 
+            и постоянные атаки врага. Освобождение Ленинграда стало символом мужества и 
+            стойкости его жителей, которые, несмотря на все трудности, продолжали 
+            сопротивляться. Этот день отмечается как день воинской славы, подчеркивающий 
+            героизм и жертвы, принесенные ради спасения города.
+        </p>
+    </div>
+
+
+    </div>
+
+   
+
+    <!-- Тест -->
     <div class="test-section">
         <h2>Пройдите тест</h2>
         <form id="quiz-form" action="/submit" method="post">
