Scroll-snap-pages

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
 
-    
+    <div class="start-pages">
     <!-- Стартовая страница  -->
-    <div class="first-page">
-        <img src="/static/images/main_img.png" class="main-img">
+    <div class="first-page section">
+        <img src="/static/images/main_img_blur.png" class="main-img-blur"> <!-- Размытое изображение -->
+        <img src="/static/images/main_img.png" class="main-img"> <!-- Основное изображение -->
         <h1 class="main-header">дни воинской славы</h1>
     </div>
 
 
     <!-- Вторая страница (описание сайта) -->
-    <div class="description-page">
+    <div class="description-page section">
         <p class="main-description">
             <b>Дни воинской славы Великой Отечественной войны</b> <br>
             представляют собой важные моменты в истории нашей страны, 
@@ -32,7 +33,7 @@
             глубже понять, как эти дни воинской славы повлияли на судьбы миллионов.</p>
         </p>
     </div>
-    <div class="box">
+    </div>
     <!-- 27 января -->
     <div class="day-section">
         <img src="/static/images/map27.png">
@@ -50,7 +51,6 @@
     </div>
 
 
-    </div>
 
    
 
