--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -18,23 +18,57 @@ body {
     font-family:"oswald";
     font-style:light;
 }
-.main-header {
-    font-family:"sacco";
-    font-size: 450%;
-    margin-top:30%;
-    margin-left:10%;
+.first-page {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    scroll-snap-align: start;
+    overflow: hidden; 
 }
+
+.main-img-blur {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    filter: blur(10px); 
+    z-index: -1; 
+}
+
 .main-img {
-    text-align:center;
     max-width: 90%;
     max-height: 40%;
+    position: relative; 
+    z-index: 1;
 }
-.first-page {
-    max-width: 100%;
-    max-height: 100%;
+
+.main-header {
+    font-family: "sacco";
+    font-size: 450%;
+    position: absolute;
+    bottom: 10%;
+    left: 10%;
     color: white;
-    background-image:url("images/main_img_blur.png");
+    z-index: 2; 
 }
+.start-pages {
+    height: 100vh; 
+    overflow-y: scroll; 
+    scroll-snap-type: y mandatory; 
+}
+
+.section {
+    min-height: 100vh; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    scroll-snap-align: start; 
+}   
 
 .description-page {
     display:flex;
