--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="start-pages">
+    <div class="pages">
     <!-- Стартовая страница  -->
     <div class="first-page section">
         <img src="/static/images/main_img_blur.png" class="main-img-blur"> <!-- Размытое изображение -->
@@ -33,10 +33,29 @@
             глубже понять, как эти дни воинской славы повлияли на судьбы миллионов.</p>
         </p>
     </div>
+    
+
+
+    <div class="main-map section">
+        <img src="/static/images/main_map.png" width="90%" height="60%">
+        <a href="#1" class="marker marker1"></a>
+        <a href="#2" class="marker marker2"></a>
+        <a href="#3" class="marker marker3"></a>
+        <a href="#4" class="marker marker4"></a>
+        <a href="#5" class="marker marker5"></a>
+        <a href="#6" class="marker marker6"></a>
+        <a href="#7" class="marker marker7"></a>
+        <a href="#8" class="marker marker8"></a>
+        <a href="#9" class="marker marker9"></a>
+
     </div>
+
+
+
     <!-- 27 января -->
-    <div class="day-section">
-        <img src="/static/images/map27.png">
+    <div class="day-background">
+    <div class="day-section section">
+        <img src="/static/images/map27.png" width="40%" height="40%">
         <p class="day-description"> 
             27 января — День полного освобождения Ленинграда от фашистской блокады
             27 января 1944 года советские войска завершили операцию по освобождению 
@@ -49,10 +68,14 @@
             героизм и жертвы, принесенные ради спасения города.
         </p>
     </div>
+    </div>
 
 
 
-   
+    <!-- Закрывающий section'ы -->
+    </div>  
+ 
+
 
     <!-- Тест -->
     <div class="test-section">
