Update index.html (line 246)
get_data.php подруб. можно и по другому обозвать

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -243,7 +243,7 @@
     <!-- Тест -->
     <div class="test-section section" id="test">
         <h2>Пройдите тест</h2>
-        <form id="quiz-form" action="/submit" method="post">
+        <form id="quiz-form" action="get_data.php" method="post">
             <label for="fio">Введите ФИО:</label>
             <input type="text" id="fio" name="fio" required><br>
                 
